src/styles/contact.scss
#contact {
    width: 100%;
    max-width: 80em;
    display: flex;
    justify-content: center;
    margin: 0 auto;
    overflow: hidden;
    & .contact-wrapper {
        height: auto;
        width: 100%;
        display: flex;
        margin: 0 auto;
        align-items: center;
        padding: 120px 0;
        gap: 20px; 

        @media (max-width: 45em) {
            flex-wrap: wrap-reverse;
        }
        & .form-wrapper {
            position: relative;
            display: flex;
            justify-content: center;
            padding: 0 25px;
            max-width: 500px;
            width: 100%;
           
        }
        & .form {
            position: relative;
            display: flex;
            flex-direction: column;
        
            height: 100%;
            width: 100%;

            & h1 {
                font-size: clamp(1.5rem, 8vw, 2rem);
                color: var(--primary);
                text-align: start;
                position: relative;
                cursor:default;
                
                &::after {
                    content: '';
                    transform: translateY(-100%);
                    position: absolute;
                    bottom: 50%;
                    margin-left: 10px;
                    background-color: var(--primary);
                    width: 100%;
                    height: 2px;
                    padding: 0 10px;
                }
            }
            & label {
                font-size: 0.8rem;
                font-weight: 600;
                color: var(--foreground);
            }
            
            & > * + * {
                margin-top: 10px;
            }

            @media (max-width: 80em) {
                margin-top: 5px;
            }

        }

        & .buttonGroup {
            
            display: flex;
            flex-direction: column;

            & .reCAPTCHA {
                align-self: center;
            }
            & .sendBtn {
                align-self: flex-end;
            }
        }
        
        .right-wrapper {
            display: flex;
          
            align-items: start;
            flex-direction: column;
            justify-content: center;
            width: 100%;
            padding: 0px 25px;

            & h1 {
                color: var(--service-background);
                font-size: clamp(40px, 12vw, 72px);
                margin: 0;
            }
            & p {
                font-size: var(--fz-xl);

                & .email{
                    text-decoration: none;
                    color: var(--primary);
                    position: relative;

                    &::after {
                        content: '';
                        height: 2px;
                        width: 100%;
                        background-color: var(--primary);
                        position: absolute;
                        bottom: 0;
                        left: 0;
                        transform: translateY(100%);
                    }
                }
            }
        }
      
    }
}




textarea {
    display: block;
    padding: 7px;
    border-radius: 5px;
    max-width: 700px;
    width: 100%;
    height: 200px;
    resize: none;
}

.input {
    display: block;
    padding: 7px;
    border-radius: 5px;
    max-width: 700px;
    width: 100%;
    height: 36px;


}

.input,
textarea {
    font-size: 0.75rem;
    font-weight: 500;
    letter-spacing: 0.03rem;
    color: rgba (0, 0, 0, 0.1);
    border: 1px solid var(--primary);
    background-color: var(--service-background);
    outline: none;

    &:focus {

        box-shadow: 0 0 0 1px var(--primary);
    }
}

.loader {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.loader {
    content: '';
    padding: 0;
    margin: 0;
    height: 16px;
    width: 16px;
    border: 3px solid var(--primary);
    border-radius: 50%;
    border-top-color: var(--light);
    border-bottom-color: var(--light);
    animation: spin 1s infinite;
}

.sendBtn {
    display: grid;
    place-content: center;
    height: 36px;
    max-width: 100px;
    width: 100%;
    padding: 0;
    text-transform: uppercase;
    border-radius: 5px;
    border: none;
    font-weight: 500;
    font-size: 0.75rem;
    cursor: pointer;
    letter-spacing: 1px;
    
    &:disabled {
        cursor: not-allowed;
    }
}

@keyframes spin {
    0% {
        transform: rotate(5turn);
    }

    100% {
        transform: rotate(3turn);
    }
}

